--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
-    <title>PA#3</title>
+    <title>CGW</title>
     <style>
         body {
             background-color: #EEEEEE;
@@ -25,13 +25,14 @@
 
     <p id="message">Drag your mouse on the cube to rotate it.<br>
         (On a touch screen, you can use your finger.)</p>
-
-    <label for="limit">Spot light angle direction</label>
-    <input type="range" name="limit" id="limit" min="1" max="1.5" step="0.01" value="1"><br>
-    <label for="border">Light softness</label>
-    <input type="range" name="border" id="border" min="0" max="0.2" step="0.01" value="0.1">
-
-
+    <label for="scale">Texture image scaling</label>
+    <input type="range" name="scale" id="scale" min="0.1" max="3" step="0.01" value="1"><br>
+    <div hidden>
+        <label for="limit">Spot light angle direction</label>
+        <input type="range" name="limit" id="limit" min="1" max="1.5" step="0.01" value="1"><br>
+        <label for="border">Light softness</label>
+        <input type="range" name="border" id="border" min="0" max="0.2" step="0.01" value="0.1">
+    </div>
     <div id="canvas-holder">
         <canvas width="600" height="600" id="webglcanvas" style="background-color:red"></canvas>
     </div>
